--- a/FlightReservationApplication/application.properties
+++ b/FlightReservationApplication/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=FlightReservationApplication
 
-spring.datasource.url=jdbc:mysql://database-1.ca1ksoogy10f.us-east-1.rds.amazonaws.com:3306/flightdb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/flightdb?createDatabaseIfNotExist=true
 spring.datasource.username=admin
 spring.datasource.password=DevPassword123
 frontend.url=http://3.93.154.213:80
